--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -30,10 +30,13 @@ ul {
     list-style: none;
     padding: 0;
     margin: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 ul li {
-    display: inline;
 }
 
 article {
