--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -17,6 +17,7 @@ body {
 header {
     grid-area: header;
     display: flex; 
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #FFEA00;
@@ -30,7 +31,7 @@ ul {
     list-style: none;
     padding: 0;
     margin: 0;
-    height: 100%;
+    height: auto;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -41,7 +42,7 @@ ul li {
 
 article {
     height: 96px;
-    width: 256px;
+    width: auto;
     background-color: #FAFAFA;
     padding: 10px;
     margin: 10px;
