--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -58,6 +58,10 @@ button.delete-member {
     float: right;
 }
 
+ul#members-list article:hover {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 ul#members-list article:hover button.delete-member {
     visibility: visible;
 }
